[package]
name = "pico-embassy-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = ["unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

#critical-section = "1.1"
#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
#debug = 2
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*
panic = "abort"